# tomo-bait

./: .env.example  .gitignore  AGENT_ENHANCEMENT_PLAN.md  CLAUDE.md  GEMINI.md  README.md  config.yaml  pixi.toml  pyproject.toml  ruff.toml
chroma_db/: chroma.sqlite3
conversations/: a284d3e1-7579-4c29-9ae7-4cbb8da8fde4.json
src/: data_ingestion.py
src/tomobait/: agents.py  anl_llm.py  app.py  cli.py  config.py  config_generator.py  config_watcher.py  data_ingestion.py  frontend.py  llm_config.py  retriever.py  scripts.py  storage.py
src/tomobait/agents/: base.py  beamline_expert.py  citation_specialist.py  query_analyzer.py  registry.py
src/tomobait/memory/: agent_memory.py  context_manager.py  conversation_memory.py
src/tomobait/orchestration/: orchestrator.py  router.py  workflows.py
src/tomobait/retrieval/: hybrid_search.py  query_reformulation.py  reranker.py
src/tomobait/tests/: __init__.py  test_argo_integration.py
src/tomobait/tools/: base.py  document.py  registry.py  search.py
