[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tomo_bait"
version = "0.1.0"
authors = [
  { name="mdecarabas", email="codrea.eric@gmail.com" },
]
description = "A Python package for ... (add a short description)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdecarabas/tomo-bait"
"Bug Tracker" = "https://github.com/mdecarabas/tomo-bait/issues"
