[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tomobait"
version = "0.1.0"
authors = [
  { name="mdecarabas", email="codrea.eric@gmail.com" },
]
description = "A Python package for ... (add a short description)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=1.49.0,<2",
    "gitpython>=3.1.45,<4",
    "sphinx>=8.2.3,<9",
    "sphinx_rtd_theme>=3.0.2,<4",
    "sphinxcontrib-bibtex>=2.6.5,<3",
    "nbsphinx>=0.9.7,<0.10",
    "pybtex>=0.25.1,<0.26",
    "ruff",
    "pyyaml",
    "ag2[gemini,mcp]",
    "sentence-transformers>=2.7.0",
    "langchain-community>=0.4.1,<0.5",
    "langchain-chroma>=1.0.0,<2",
    "langchain-huggingface>=1.0.1,<2",
    "langchain-text-splitters>=1.0.0,<2",
    "google-generativeai>=0.8.5,<0.9",
    "fastapi",
    "uvicorn>=0.29.0,<0.30",
    "gradio>=5.23",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/mdecarabas/tomo-bait"
"Bug Tracker" = "https://github.com/mdecarabas/tomo-bait/issues"

[project.scripts]
start-backend = "tomobait.app:main"
start-frontend = "tomobait.frontend:main"


[tool.setuptools.packages.find]
where = ["src"]
